Added noscript stuff.

--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
             <p>JavaScript 1.8.x is required to view this page.</p>
         </div>
     </div>
+    <noscript>
+        <div id="megafail">
+            <div>
+                <h1>Compatability Failed</h1>
+                <p>JavaScript is required to view this page.</p>
+            </div>
+        </div>
+    </noscript>
 </body>
 </html>
