--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 <body>
     <div id="fail">
         <div>
-            <h1>Compatability Failed</h1>
+            <h1>Compatibility Failed</h1>
             <p>JavaScript 1.8.x is required to view this page.</p>
         </div>
     </div>
     <noscript>
         <div id="megafail">
             <div>
-                <h1>Compatability Failed</h1>
+                <h1>Compatibility Failed</h1>
                 <p>JavaScript is required to view this page.</p>
             </div>
         </div>
