--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Preware</title>
     <meta name="keywords" content="preware, webos, internals, open, source, web, package, manager" />
     <meta name="description" content="Preware is a package management application for the Palm Pre." />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <script type="text/javascript" src="javascript/dd.js"></script>
     <link href="stylesheets/fail.css" media="screen" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="favicon.ico" />
