--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="preware, webos, internals, open, source, web, package, manager" />
     <meta name="description" content="Preware is a package management application for the Palm Pre." />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="google-site-verification" content="QNMJLLwTd_OrBWUxRUEkNGdGye2HHuezJeZ0Qc_oxXY" />
     <script type="text/javascript" src="javascript/dd.js"></script>
     <link href="stylesheets/fail.css" media="screen" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="favicon.ico" />
